missing questions in contract

--- a/app/views/prototypes/all-staff/list-staff-john.html
+++ b/app/views/prototypes/all-staff/list-staff-john.html
@@ -64,7 +64,7 @@
           <input type="hidden" name="answers-checked" value="true">
 
           <a href="#" class="govuk-button show-continue" style="display: inline;">
-     Continue
+     Submit staff
     </a>
 
         
