missing questions in contract

--- a/app/views/prototypes/all-staff/complete-john-four.html
+++ b/app/views/prototypes/all-staff/complete-john-four.html
@@ -59,20 +59,14 @@
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="maths" aria-describedby="company-information-completed">
-                  Qualifications
+                  Qualifications and subjects
                 </a>
               </span>
               <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
              
             </li>
-            <li class="app-task-list__item">
-              <span class="app-task-list__task-name">
-                <a href="#" aria-describedby="contact-details-completed">
-                  Subjects taught
-                </a>
-              </span>
-             
-            </li>
+            
+
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="contract">
