--- a/app/views/prototypes/all-staff/complete-john-two.html
+++ b/app/views/prototypes/all-staff/complete-john-two.html
@@ -59,19 +59,16 @@
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="maths" aria-describedby="company-information-completed">
-                  Qualifications
+                  Qualifications and subjects
                 </a>
               </span>
              
             </li>
-            <li class="app-task-list__item">
-              <span class="app-task-list__task-name">
-                <a href="#" aria-describedby="contact-details-completed">
-                  Subjects taught
-                </a>
-              </span>
-             
-            </li>
+
+
+            
+
+
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="contract">
