--- a/app/views/prototypes/all-staff/complete-john-five.html
+++ b/app/views/prototypes/all-staff/complete-john-five.html
@@ -59,20 +59,13 @@
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="maths" aria-describedby="company-information-completed">
-                  Qualifications
+                  Qualifications and subjects
                 </a>
               </span>
               <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
              
             </li>
-            <li class="app-task-list__item">
-              <span class="app-task-list__task-name">
-                <a href="#" aria-describedby="contact-details-completed">
-                  Subjects taught
-                </a>
-              </span>
-             
-            </li>
+           
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="contract">
@@ -100,7 +93,7 @@
 
           <input type="hidden" name="answers-checked" value="true">
 
-          <a href="list-staff-john" class="govuk-button show-continue" style="display: inline;">
+          <a href="list-staff-john-end" class="govuk-button show-continue" style="display: inline;">
      Staff list
     </a>
 
