--- a/app/views/prototypes/all-staff/maths.html
+++ b/app/views/prototypes/all-staff/maths.html
@@ -27,7 +27,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="sign-in-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What's their highest qualification in maths?
+        What's their highest qualification in Maths?
       </h1>
     </legend>
     <!--<span id="sign-in-hint" class="govuk-hint">
