--- a/app/views/prototypes/all-staff/training.html
+++ b/app/views/prototypes/all-staff/training.html
@@ -31,9 +31,9 @@
         Are they training to become a teacher?
       </h1>
     </legend>
-    <span id="changed-name-hint" class="govuk-hint">
+    <!--<span id="changed-name-hint" class="govuk-hint">
       This includes changing your last name or spelling your name differently.
-    </span>
+    </span>-->
     <div class="govuk-radios govuk-radios--inline">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="changed-name" name="changed-name" type="radio" value="yes">
