--- a/app/views/prototypes/all-staff/vocational.html
+++ b/app/views/prototypes/all-staff/vocational.html
@@ -194,7 +194,7 @@
 <br><br>
 
 
-          <a href="teaching-qualification" class="govuk-button show-continue" style="display: inline;">
+          <a href="esol" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
