missing questions in contract

--- a/app/views/prototypes/all-staff/contract.html
+++ b/app/views/prototypes/all-staff/contract.html
@@ -16,11 +16,12 @@
 
  <span class="govuk-caption-xl">John Vincent Adams </span>   
 
-  <main class="govuk-main-wrapper " id="main-content" role="main">
+  
+    <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-full">
+      <div class="govuk-grid-column-two-thirds">
         
-          <div class="govuk-form-group">
+
 
             
 
@@ -29,9 +30,9 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Main type of contract?
+        What is their main type of contract?
       </h1>
-    </legend>
+    </legend><br>
     
     <div class="govuk-radios">
 
