--- a/app/views/prototypes/all-staff/contracted-hours.html
+++ b/app/views/prototypes/all-staff/contracted-hours.html
@@ -40,7 +40,7 @@
 <br><br>
 
 
-          <a href="benefits" class="govuk-button show-continue" style="display: inline;">
+          <a href="fte" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
