--- a/app/views/prototypes/all-staff/fte.html
+++ b/app/views/prototypes/all-staff/fte.html
@@ -40,7 +40,7 @@
 <br><br>
 
 
-          <a href="contracted-hours" class="govuk-button show-continue" style="display: inline;">
+          <a href="benefits" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
