--- a/app/views/prototypes/all-staff/salary.html
+++ b/app/views/prototypes/all-staff/salary.html
@@ -134,7 +134,7 @@
 <br><br>
 
 
-          <a href="fte" class="govuk-button show-continue" style="display: inline;">
+          <a href="contracted-hours" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
