missing questions in contract

--- a/app/views/prototypes/all-staff/answers-staff.html
+++ b/app/views/prototypes/all-staff/answers-staff.html
@@ -282,8 +282,8 @@
 </fieldset><br>-->
 
 
-         <a href="hello" class="govuk-button show-continue" style="display: inline;">
-      Back
+         <a href="complete-john" class="govuk-button show-continue" style="display: inline;">
+      Back to summary list
     </a>
        
       </div>
