--- a/app/views/prototypes/all-staff/complete-john.html
+++ b/app/views/prototypes/all-staff/complete-john.html
@@ -40,7 +40,7 @@
           <ul class="app-task-list__items">
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="#" aria-describedby="eligibility-completed">
+                <a href="answers-staff" aria-describedby="eligibility-completed">
                   Personal details
                 </a>
               </span>
