missing questions in contract

--- a/app/views/prototypes/all-staff/what-training.html
+++ b/app/views/prototypes/all-staff/what-training.html
@@ -25,51 +25,76 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Which teaching qualification are they studying?
+        What teacher training are they studying?
       </h1>
     </legend><br>
     
-    <div class="govuk-checkboxes">
-      <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
-        <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Level 3
-        </label>
-      </div>
-      <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
-        <label class="govuk-label govuk-checkboxes__label" for="waste-2">
-          Level 4
-        </label>
-      </div>
-      <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
-        <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-          Level 5
-        </label>
-      </div>
-
-      <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
-        <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Level 6
-        </label>
-      </div>
-      <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
-        <label class="govuk-label govuk-checkboxes__label" for="waste-2">
-          Level 7
-        </label>
+    <div class="govuk-radios">
+      
       </div>
       
 
+       <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
+          Level 3
+        </label>
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          Level 3 Award in Education and Training, Level 3 Award in Preparing to Teach in the Lifelong Learning Sector (PTLLS)
+        </span>
+      </div>
 
+       <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
+          Level 4
+        </label>
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          Level 4 in Education and Training, Level 4 Certificate in Teaching in the Lifelong Learning Sector
+        </span>
+        
+      </div>
 
+       <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
+          Level 5
+        </label>
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          Level 5 in Diploma in Education and Training, Level 5 Diploma in Teaching in the Lifelong Learning Sector (DTLLS) or apprenticeship
+        </span>
+        
+      </div>
 
+       <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
+          Level 6
+        </label>
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          Bachelors in Education (BEd)  
+        </span>
+      </div>
 
+       <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
+          Level 7
+        </label>
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          Postgraduate Certificate in Education (PGCE)  
+        </span>
+      </div>
 
+       
 
+       
     </div>
+  </fieldset>
+</div>
+</div>
+
+<br>
 
 
 
@@ -80,10 +105,7 @@
    
 
 
-  </fieldset>
-</div>
-</div>
-</div>
+  
 
 <br><br>
 
