--- a/app/views/index.html
+++ b/app/views/index.html
@@ -64,16 +64,20 @@
 
         <h2 class="govuk-heading-m">New start without staff self service</h2>
 
-        <p>Absolutely throwing it at the wall - <a href="/prototypes/new-start/details">What it might look like while we wait for the data set to be agreed</a>
-      </p><br>
+        
 
       <p>Eve's provider questions - <a href="/prototypes/eves/details">Start</a>
       </p><br>
 
       <p>Peter's staff questions - <a href="/prototypes/peters-staff/start-staff">Start</a>
+      </p><br><br>
+
+       <h2 class="govuk-heading-m">Prototypes for Eve and Helen to check</h2>
+
+      <p>Provider questions - <a href="/prototypes/new-start/details">Start</a>
       </p><br>
 
-      <p>All staff questions in a flow - <a href="/prototypes/all-staff/start-staff">Start</a>
+      <p>Staff questions - <a href="/prototypes/all-staff/start-staff">Start</a>
       </p><br>
 
       <br><br>
