missing questions in contract

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -70,9 +70,11 @@
       </p><br>
 
       <p>Peter's staff questions - <a href="/prototypes/peters-staff/start-staff">Start</a>
-      </p><br><br>
+      </p><br><br><br>
 
-       <h2 class="govuk-heading-m">Prototypes for Eve and Helen to check</h2>
+
+
+       <h2 class="govuk-heading-m">All questions for Eve and Helen to check</h2>
 
       <p>Provider questions - <a href="/prototypes/new-start/details">Start</a>
       </p><br>
