--- a/app/views/prototypes/all-staff/maths.html
+++ b/app/views/prototypes/all-staff/maths.html
@@ -68,6 +68,9 @@
         <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
           Level 4
         </label>
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          Need copy
+        </span>
         
       </div>
 
@@ -76,6 +79,9 @@
         <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
           Level 5
         </label>
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+         Need copy
+        </span>
         
       </div>
 
@@ -99,26 +105,36 @@
         </span>
       </div>
 
-       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
-          Other
-        </label>
-        
-      </div>
-
-       <div class="govuk-radios__item">
+      <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
           Don't know
         </label>
-        
+        </div>
+
+        <br>
+
+       <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="how-contacted-conditional" name="how-contacted" type="radio" value="email" data-aria-controls="conditional-how-contacted-conditional">
+        <label class="govuk-label govuk-radios__label" for="how-contacted-conditional">
+          Other
+        </label>
       </div>
+      <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-how-contacted-conditional">
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="contact-by-email">
+           Enter the qualification
+          </label>
+          <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false">
+        </div>
+
+       
     </div>
   </fieldset>
 </div>
 
-<br><br>
+<br>
 
 
           <a href="english" class="govuk-button show-continue" style="display: inline;">
