--- a/app/views/prototypes/all-staff/paid.html
+++ b/app/views/prototypes/all-staff/paid.html
@@ -29,9 +29,9 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Are they paid weekly or monthly?
+        How are they paid?
       </h1>
-    </legend>
+    </legend><br>
     
     <div class="govuk-radios">
 
@@ -47,6 +47,21 @@
           Monthly
         </label>
       </div>
+
+      <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="how-contacted-conditional" name="how-contacted" type="radio" value="email" data-aria-controls="conditional-how-contacted-conditional">
+        <label class="govuk-label govuk-radios__label" for="how-contacted-conditional">
+          Other
+        </label>
+      </div>
+      <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-how-contacted-conditional">
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="contact-by-email">
+           Enter another period of time
+          </label>
+          <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false">
+        </div>
       
       
       
