amends from meeting

--- a/app/views/prototypes/all-staff/training.html
+++ b/app/views/prototypes/all-staff/training.html
@@ -30,7 +30,7 @@
       <h1 class="govuk-fieldset__heading">
         Are they training to become a teacher?
       </h1>
-    </legend>
+    </legend><br>
     <!--<span id="changed-name-hint" class="govuk-hint">
       This includes changing your last name or spelling your name differently.
     </span>-->
