--- a/app/views/prototypes/all-staff/what-teaching-qualification.html
+++ b/app/views/prototypes/all-staff/what-teaching-qualification.html
@@ -31,7 +31,7 @@
     
     <div class="govuk-radios">
       
-      </div>
+     
       
 
        <div class="govuk-radios__item">
@@ -97,8 +97,16 @@
        <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
+          Working towards a teaching qualification
+        </label>
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
           Unsure
         </label>
+      </div>
         
       </div>
     </div>
@@ -119,7 +127,7 @@
 
   
 
-<br><br>
+
 
 
           <a href="training" class="govuk-button show-continue" style="display: inline;">
