--- a/app/views/prototypes/all-staff/how-long-role.html
+++ b/app/views/prototypes/all-staff/how-long-role.html
@@ -72,7 +72,7 @@
 <br><br>
 
 
-          <a href="how-long-org" class="govuk-button show-continue" style="display: inline;">
+          <a href="how-long-education" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
