--- a/app/views/prototypes/all-staff/vocational.html
+++ b/app/views/prototypes/all-staff/vocational.html
@@ -147,7 +147,7 @@
       <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional">
         <div class="govuk-form-group">
           <label class="govuk-label" for="contact-by-email">
-            Email address
+            Subject
           </label>
           <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false">
         </div>
@@ -162,7 +162,7 @@
       <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional-2">
         <div class="govuk-form-group">
           <label class="govuk-label" for="contact-by-phone">
-            Phone number
+            Subject
           </label>
           <input class="govuk-input govuk-!-width-one-third" id="contact-by-phone" name="contact-by-phone" type="tel">
         </div>
@@ -177,7 +177,7 @@
       <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional-3">
         <div class="govuk-form-group">
           <label class="govuk-label" for="contact-by-text">
-            Mobile phone number
+            Subject
           </label>
           <input class="govuk-input govuk-!-width-one-third" id="contact-by-text" name="contact-by-text" type="tel">
         </div>
