--- a/app/views/prototypes/all-staff/salary.html
+++ b/app/views/prototypes/all-staff/salary.html
@@ -11,39 +11,42 @@
 {% block content %}
 
 
-      <a href="#" class="govuk-back-link">Back</a>
-
-  <span class="govuk-caption-xl">John Vincent Adams </span><br>
-
-  <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds-from-desktop">
-
-            
 
 
- <div class="govuk-form-group">
-  <fieldset class="govuk-fieldset">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-      <h1 class="govuk-fieldset__heading">
-        What was their gross annual salary?
-      </h1>
-    </legend><br>
-    
-  <div class="govuk-form-group">
-  <label class="govuk-label" for="full-name">
-    Enter the amount
-  </label>
-  <input class="govuk-input" id="full-name" name="full-name" type="text" autocomplete="name" spellcheck="false">
-</div>
-  </fieldset>
-</div>
+<div class="govuk-width-container">
+  <a href="#" class="govuk-back-link">Back</a>
 
-<br><br>
+  <span class="govuk-caption-xl">John Vincent Adams </span>
 
+  <main class="govuk-main-wrapper " id="main-content" role="main">
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+        <form action="/form-handler" method="post" novalidate>
+          <div class="govuk-form-group">
+            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--xl" for="postcode">
+                What was their gross annual salary?
+              </label><br>
+              <span id="sort-code-hint" class="govuk-hint">
+    For example, 23,000
+  </span>
+
+            </h1>
+            <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text">
+          </div>
 
           <a href="contracted-hours" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
+        </form>
+      </div>
+    </div>
+  </main>
+</div>
+
+
+
+
+          
        
       </div>
     </div>
